[package]
name = "brainfish-rust"
version = "0.1.0"
edition = "2021"
authors = ["BlackBoxAI"]
description = "Rust integration layer for BrainFish chess engine"

[lib]
name = "brainfish_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "brainfish-rust"
path = "src/main.rs"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI
libc = "0.2"
